--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,9 @@
         // "noUnusedLocals": true, @typescript-eslint/no-unused-expressions
         // "noUnusedParameters": true, @typescript-eslint/no-unused-expressions
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+
+        "plugins": [{ "name": "typescript-plugin-css-modules" }]
     },
     "include": ["src", "./eslint.config.js", "./vite.config.ts"]
 }
