--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "trailingComma": "es5",
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "printWidth": 100
+    "printWidth": 100,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
