--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "check-conflict": "eslint-config-prettier ./src/**.tsx ./src/**.ts"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.1.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -30,11 +32,10 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
-        "prettier": "^3.5.0",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "stylelint-prettier": "^5.0.3",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.22.0",
-        "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.1.0"
     }
 }
