--- a/package.json
+++ b/package.json
@@ -13,13 +13,25 @@
         "check-conflict": "eslint-config-prettier ./src/**.tsx ./src/**.ts"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.49.4",
         "@tailwindcss/vite": "^4.1.3",
+        "@tanstack/react-query": "^5.74.4",
+        "@tanstack/react-query-devtools": "^5.74.4",
+        "@tanstack/react-router": "^1.116.0",
+        "@tanstack/react-router-devtools": "^1.116.0",
+        "date-fns": "^4.1.0",
+        "lucide-react": "^0.488.0",
+        "motion": "^12.7.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-tooltip": "^5.28.1",
         "tailwindcss": "^4.1.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@tanstack/eslint-plugin-query": "^5.73.3",
+        "@tanstack/eslint-plugin-router": "^1.115.0",
+        "@tanstack/router-plugin": "^1.116.1",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
