--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "motion": "^12.7.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.5.2",
         "react-tooltip": "^5.28.1",
-        "tailwindcss": "^4.1.3"
+        "tailwindcss": "^4.1.3",
+        "zod": "^3.24.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
