--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
         "check-conflict": "eslint-config-prettier ./src/**.tsx ./src/**.ts"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-tooltip": "^1.2.6",
         "@supabase/supabase-js": "^2.49.4",
-        "@tailwindcss/vite": "^4.1.3",
+        "@tailwindcss/vite": "^4.1.7",
         "@tanstack/react-query": "^5.74.4",
         "@tanstack/react-query-devtools": "^5.74.4",
         "@tanstack/react-router": "^1.116.0",
         "@tanstack/react-router-devtools": "^1.116.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.488.0",
         "motion": "^12.7.3",
@@ -26,7 +32,8 @@
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
         "react-tooltip": "^5.28.1",
-        "tailwindcss": "^4.1.3",
+        "tailwind-merge": "^3.3.0",
+        "tailwindcss": "^4.1.7",
         "zod": "^3.24.3"
     },
     "devDependencies": {
@@ -34,6 +41,7 @@
         "@tanstack/eslint-plugin-query": "^5.73.3",
         "@tanstack/eslint-plugin-router": "^1.115.0",
         "@tanstack/router-plugin": "^1.116.1",
+        "@types/node": "^22.15.18",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
@@ -48,6 +56,7 @@
         "globals": "^15.14.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "stylelint-prettier": "^5.0.3",
+        "tw-animate-css": "^1.3.0",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.22.0",
         "vite": "^6.1.0"
