--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
         "check-conflict": "eslint-config-prettier ./src/**.tsx ./src/**.ts"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-alert-dialog": "^1.1.13",
+        "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-select": "^2.2.4",
         "@radix-ui/react-slot": "^1.2.2",
         "@radix-ui/react-tooltip": "^1.2.6",
         "@supabase/supabase-js": "^2.49.4",
@@ -30,11 +34,12 @@
         "motion": "^12.7.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.56.4",
         "react-hot-toast": "^2.5.2",
         "react-tooltip": "^5.28.1",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.7",
-        "zod": "^3.24.3"
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
