--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-hook-form": "^7.56.4",
         "react-hot-toast": "^2.5.2",
         "react-tooltip": "^5.28.1",
+        "recharts": "^2.15.3",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.7",
         "zod": "^3.25.20"
