--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-select": "^2.2.4",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.6",
+        "@react-pdf/renderer": "^4.3.0",
         "@supabase/supabase-js": "^2.49.4",
         "@tailwindcss/vite": "^4.1.7",
         "@tanstack/react-query": "^5.74.4",
